k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiggy-ingress
  namespace: swiggy
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "swiggy-ip"
    networking.gke.io/managed-certificates: "swiggy-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: swiggy-surya.duckdns.org
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5000
          - path: /api/restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 5001
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 5001
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 5001
          - path: /api/address
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 5001
          - path: /api/menu
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 5001
          - path: /api/utils
            pathType: Prefix
            backend:
              service:
                name: utils-service
                port:
                  number: 5002
          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: utils-service
                port:
                  number: 5002
          - path: /api/upload
            pathType: Prefix
            backend:
              service:
                name: utils-service
                port:
                  number: 5002
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: realtime-service
                port:
                  number: 5004
          - path: /api/realtime
            pathType: Prefix
            backend:
              service:
                name: realtime-service
                port:
                  number: 5004
          - path: /api/rider
            pathType: Prefix
            backend:
              service:
                name: rider-service
                port:
                  number: 5005
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 5006
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
